# advent-of-code-2020

./: .gitignore  advent-of-code.cabal  default.nix  get-inputs  release.nix  shell.nix  start-tmux
nix/: pinned-nixpkgs.nix
src/AoC/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Utils.hs
